fix wrap

--- a/style/slide.css
+++ b/style/slide.css
@@ -27,6 +27,8 @@
 }
 .slide-links {
     margin: 10px auto;
+    width: max-content;
+    text-wrap: nowrap;
     font-family: 'Courier New', Courier, monospace;
 }
 .slide-link {
